--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,10 @@
         <h2>{{ site.author }}</h2>
 
         <p>{{ site.description }}</p>
+        
+        <h3><a href="{{site.rss_feed | relative_url }}">{{ "RSS Feed" }}</a></h3>
+        <h3><a href="{{https://www.twitter.com/weusedtobefun}}">{{ "Twitter: WeUsedToBeFun" }}</a></h3>        
+        
       </header>
       <section>
 
