--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         <p>{{ site.description }}</p>
         
         <h3><a href="{{site.rss_feed | relative_url }}">{{ "RSS Feed" }}</a></h3>
-        <h3><a href="{{site.twitter_url}}">{{ "Twitter" }}</a></h3>        
+        <h3><a href="{{site.twitter_url}}">Twitter</a></h3>        
         
       </header>
       <section>
