--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,9 +20,12 @@
         <h2>{{ site.author }}</h2>
 
         <p>{{ site.description }}</p>
-        
+          
+        <h3><a href="{{site.apple_url}}">Apple Podcasts</a></h3>  
+        <h3><a href="{{site.google_url}}">Google Podcasts</a></h3>   
+        <h3><a href="{{site.spotify_url}}">Spotify Podcasts</a></h3>   
         <h3><a href="{{site.rss_feed | relative_url }}">{{ "RSS Feed" }}</a></h3>
-        <h3><a href="{{site.twitter_url}}">Twitter</a></h3>        
+        <h3><a href="{{site.twitter_url}}">Twitter</a></h3>  
         
       </header>
       <section>
