updated direct links on main page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,11 +21,11 @@
 
         <p>{{ site.description }}</p>
           
-        <h3><a href="{{site.apple_url}}">Apple Podcasts</a></h3>  
-        <h3><a href="{{site.google_url}}">Google Podcasts</a></h3>   
-        <h3><a href="{{site.spotify_url}}">Spotify Podcasts</a></h3>   
+        <h3><a href="https://podcasts.apple.com/us/podcast/we-used-to-be-fun/id1451681576">Apple Podcasts</a></h3>  
+        <h3><a href="https://podcasts.google.com/feed/aHR0cHM6Ly93ZXVzZWR0b2JlZnVuLnBvZGJlYW4uY29tL2ZlZWQueG1s?sa=X&ved=2ahUKEwjI97iy39L2AhWjgokEHQ0zDV4Q9sEGegQIARAC">Google Podcasts</a></h3>   
+        <h3><a href="https://open.spotify.com/show/3dzxUTWxRNKVLWKiJVt6Bi">Spotify Podcasts</a></h3>   
+        <h3><a href="https://www.twitter.com/weusedtobefun">Twitter</a></h3>  
         <h3><a href="{{site.rss_feed | relative_url }}">{{ "RSS Feed" }}</a></h3>
-        <h3><a href="{{site.twitter_url}}">Twitter</a></h3>  
         
       </header>
       <section>
